--- a/index.html
+++ b/index.html
@@ -67,12 +67,7 @@
             <div class="days" id="days"></div>
           </div>
           <div class="content-mark">
-            <div class="days" id="day-22">
-              <p>date</p>
-            </div>
-            <div class="days" id="day-23">
-              <p>date</p>
-            </div>
+            <div class="selected-date"></div>
             <div class="btn">
               <button class="btn-select">14:00</button>
               <button class="btn-select">15:00</button>
