--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p class="duration">Duration</p>
           <div class="dropdown">
             <input type="text" placeholder="Pick a Time" readonly />
-            <ul class="options">
+            <ul id="opcao" class="options">
               <li class="option" value="30">30 minutes</li>
               <li class="option" value="60">60 minutes</li>
             </ul>
@@ -68,9 +68,8 @@
           </div>
           <div class="content-mark">
             <div class="selected-date"></div>
-            <div class="btn">
-              <button class="btn-select">14:00</button>
-              <button class="btn-select">15:00</button>
+            <div id="button-container">
+              <!-- Aqui os botões serão adicionados -->
             </div>
           </div>
         </div>
