--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p class="duration">Duration</p>
           <div class="dropdown">
             <input type="text" placeholder="Pick a Time" readonly />
-            <ul id="opcao" class="options">
+            <ul id="dropdown-time" class="options">
               <li class="option" value="30">30 minutes</li>
               <li class="option" value="60">60 minutes</li>
             </ul>
